--- a/src/app/components/Project/projects-feed/projects-feed.component.html
+++ b/src/app/components/Project/projects-feed/projects-feed.component.html
@@ -1,20 +1,23 @@
 <div style="background-color: rgb(211, 211, 211);">
     <div class="row p-2 pl-4 pr-0" >
         <div class="col-sm-2 col-md-2 col-lg-2 pt-1" style="background-color: white; border-radius: 15px; height:80vh;">
-            <div (click)="getProjectsByFilter(0)" class="btn btn-danger btn-block btn-compose-email mt-2 {{ currentMenu == 0 ? 'active' : 'inactive'}}">all Projects</div>
-            <div (click)="getProjectsByFilter(1)" class="btn btn-danger btn-block btn-compose-email mt-2 {{ currentMenu == 1 ? 'active' : 'inactive'}}">finished Projects</div>
-            <div (click)="getProjectsByFilter(2)" class="btn btn-danger btn-block btn-compose-email mt-2 {{ currentMenu == 2 ? 'active' : 'inactive'}}">unfinished Projects</div>
+            <div (click)="getProjectsByFilter(0, 0)" class="btn btn-danger btn-block btn-compose-email mt-2 {{ currentMenu == '0/0' ? 'active' : 'inactive'}}">all Projects</div>
+            <div (click)="getProjectsByFilter(1, 1)" class="btn btn-danger btn-block btn-compose-email mt-2 {{ currentMenu == '1/1' ? 'active' : 'inactive'}}">finished Projects</div>
+            <div (click)="getProjectsByFilter(1, 2)" class="btn btn-danger btn-block btn-compose-email mt-2 {{ currentMenu == '1/2' ? 'active' : 'inactive'}}">unfinished Projects</div>
+            <div class="panel-heading">
+                <h6 class="panel-title text-center mt-3">Targeted plateforms <i class="fa fa-arrow-down"></i></h6> 
+            </div>
+            <div (click)="getProjectsByFilter(2, 1)" class="btn btn-danger btn-block btn-compose-email mt-2 {{ currentMenu == '2/1' ? 'active' : 'inactive'}}"><i class="fa fa-facebook-official"></i> Facebook</div>
+            <div (click)="getProjectsByFilter(2, 2)" class="btn btn-danger btn-block btn-compose-email mt-2 {{ currentMenu == '2/2' ? 'active' : 'inactive'}}"><i class="fa fa-instagram"></i> Instagram</div>
+            <div (click)="getProjectsByFilter(2, 3)" class="btn btn-danger btn-block btn-compose-email mt-2 {{ currentMenu == '2/3' ? 'active' : 'inactive'}}"><i class="fa fa-pinterest"></i> Pinterest</div>
+            <div (click)="getProjectsByFilter(2, 4)" class="btn btn-danger btn-block btn-compose-email mt-2 {{ currentMenu == '2/4' ? 'active' : 'inactive'}}"><i class="fa fa-twitter"></i> Twitter</div>
+
+            <br/><br/><br/><br/><br/>
             <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h6 class="panel-title text-center mt-3">Targeted plateforms <i class="fa fa-arrow-down"></i></h6> 
-                </div>
+                
                 <div class="panel-body"></div>
             </div>
             <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Age</h3>
-                    <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
-                </div>
                 <div class="panel-body">Panel content</div>
                 Working on It MF . . . 
             </div>
@@ -39,13 +42,13 @@
                                             <h6 *ngIf="isJustFacebookProj(proj)" class="fb-txt">
                                                 <i class="fa fa-facebook-f"></i> Facebook
                                             </h6>
-                                            <h6 *ngIf="isJustPeinterestProj(proj)" class="pt-txt">
+                                            <h6 *ngIf="isJustPinterestProj(proj)" class="pt-txt">
                                                 <i class="fa fa-pinterest"></i> Pinterest
                                             </h6>
                                             <h6 *ngIf="isJustTikTokProj(proj)">
                                                 <i class="fa fa-music"></i> TikTok
                                             </h6>
-                                            <h6 *ngIf="isJustPeinterestProj(proj)" class="pt-txt">
+                                            <h6 *ngIf="isJustPinterestProj(proj)" class="pt-txt">
                                                 <i class="fa fa-pinterest"></i> Pinterest
                                             </h6>
                                             <h6 *ngIf="isJustTwitterProj(proj)" class="twt-txt">
@@ -55,7 +58,7 @@
                                                 <div *ngFor="let plat of proj.targetedCriterias.targetedPlatforms">
                                                     <i *ngIf="plat == 'Facebook'" class="fa fa-facebook-f font-weight-bold float-left fb-txt ml-2"></i>
                                                     <i *ngIf="plat == 'Instagram'" class="fa fa-instagram font-weight-bold float-left in-txt ml-2"></i>
-                                                    <i *ngIf="plat == 'Peinterest'" class="fa fa-pinterest font-weight-bold float-left pt-txt ml-2"></i>
+                                                    <i *ngIf="plat == 'Pinterest'" class="fa fa-pinterest font-weight-bold float-left pt-txt ml-2"></i>
                                                     <i *ngIf="plat == 'TikTok'" class="fa fa-music font-weight-bold float-left ml-2"></i>
                                                     <i *ngIf="plat == 'Twitter'" class="fa fa-twitter font-weight-bold float-left twt-txt ml-2"></i>
                                                 </div>
@@ -70,17 +73,17 @@
                                             <div class="author">
                                                 <a href="#"> <img [src]="proj.user.profile.profilePhoto" alt="esm moula lprojet" class="a"/> <span>{{ proj.user.username }}</span></a>
                                             </div>
-                                            <div class="time" style="float: right;">
-                                                <i class="fa fa-clock-o"></i> 10 min 
+                                            <div class="time date" style="float: right;">
+                                                <i class="fa fa-clock-o"></i> {{ proj.createdAt.substr(0, 10) }}
                                             </div>
                                         </div>
                                     </div>                 
                                 </div>
                             </div>
                             <!--Copy-->
-                            <div *ngIf="!proj.media" class="card text-card mt-4 {{ isJustPeinterestProj(proj) ? 'peinterest' : ''}} {{ isJustFacebookProj(proj) ? 'facebook' : ''}} {{ isJustTwitterProj(proj) ? 'twitter' : ''}} {{ isJustInstagramProj(proj)||isJustTikTokProj(proj)||isMultiPlatformesProj(proj)||isNotDefPlatformesProj(proj) ? 'simple' : ''}}" style="width: 18rem;height:550px;" >
+                            <div *ngIf="!proj.media" class="card text-card mt-4 {{ isJustPinterestProj(proj) ? 'peinterest' : ''}} {{ isJustFacebookProj(proj) ? 'facebook' : ''}} {{ isJustTwitterProj(proj) ? 'twitter' : ''}} {{ isJustInstagramProj(proj)||isJustTikTokProj(proj)||isMultiPlatformesProj(proj)||isNotDefPlatformesProj(proj) ? 'simple' : ''}}" style="width: 18rem;height:550px;" >
                                     <div class="row">
-                                        <h5 *ngIf="isJustPeinterestProj(proj)" class="category-social col-8 mb-0" style="margin-top:2%;" >
+                                        <h5 *ngIf="isJustPinterestProj(proj)" class="category-social col-8 mb-0" style="margin-top:2%;" >
                                             <i class="fa fa-pinterest ml-3"></i> &nbsp;Pinterest
                                         </h5>
                                         <h5 *ngIf="isJustFacebookProj(proj)" class="category-social col-8 mb-0" style="margin-top:2%;" >
@@ -95,14 +98,14 @@
                                         <h5 *ngIf="isJustTwitterProj(proj)" class="category-social col-8 mb-0" style="margin-top:2%;" >
                                             <i class="fa fa-twitter font-weight-bold ml-3" aria-hidden="true"></i> &nbsp;Twitter
                                         </h5>
-                                        <div class="time col-4 {{ isMultiPlatformesProj(proj)||isNotDefPlatformesProj(proj) ? 'ml-3' : ''}}" style="float:right;font-size:85%;">
-                                            <i class="fa fa-clock-o"></i> 10 min 
+                                        <div class="time col-4 date {{ isMultiPlatformesProj(proj)||isNotDefPlatformesProj(proj) ? 'ml-3' : ''}}" style="float:right;">
+                                            <i class="fa fa-clock-o"></i> {{ proj.createdAt.substr(0, 10) }}
                                         </div>
                                         <h5 *ngIf="isMultiPlatformesProj(proj)" class="category-social mb-0 mt-2 col-7" >
                                             <div class="float-right mr-2" *ngFor="let plat of proj.targetedCriterias.targetedPlatforms">
                                                 <i *ngIf="plat == 'Facebook'" class="fa fa-facebook-f font-weight-bold float-left fb-txt"></i>
                                                 <i *ngIf="plat == 'Instagram'" class="fa fa-instagram font-weight-bold float-left in-txt"></i>
-                                                <i *ngIf="plat == 'Peinterest'" class="fa fa-pinterest font-weight-bold float-left pt-txt"></i>
+                                                <i *ngIf="plat == 'Pinterest'" class="fa fa-pinterest font-weight-bold float-left pt-txt"></i>
                                                 <i *ngIf="plat == 'TikTok'" class="fa fa-music font-weight-bold float-left"></i>
                                                 <i *ngIf="plat == 'Twitter'" class="fa fa-twitter font-weight-bold float-left twt-txt"></i>
                                             </div>
@@ -122,7 +125,7 @@
                                         </div>
                                         
                                       </div>
-                                      <div class="ftr text-center"> <button type="button" class="btn btn-info btn-light btn-round font-weight-bold {{ isJustInstagramProj(proj) ? 'in-txt' : ''}} {{ isJustPeinterestProj(proj) ? 'pt-txt' : ''}} {{ isJustFacebookProj(proj) ? 'fb-txt' : ''}} {{ isJustTwitterProj(proj) ? 'twt-txt' : ''}}">Contribute</button> </div>
+                                      <div class="ftr text-center"> <button type="button" class="btn btn-info btn-light btn-round font-weight-bold {{ isJustInstagramProj(proj) ? 'in-txt' : ''}} {{ isJustPinterestProj(proj) ? 'pt-txt' : ''}} {{ isJustFacebookProj(proj) ? 'fb-txt' : ''}} {{ isJustTwitterProj(proj) ? 'twt-txt' : ''}}">Contribute</button> </div>
                                       
                                     </div>
                             </div>
