--- a/src/app/components/commun/navbar-profile/navbar-profile.component.html
+++ b/src/app/components/commun/navbar-profile/navbar-profile.component.html
@@ -1,66 +1,50 @@
-<nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-pers" *ngIf="user"> 
-    <a class="navbar-brand" [routerLink]="['']" routerLinkActive="active"><img src="../../../../../assets/images/logo.PNG" class="rounded-circle z-depth-0 img-taille"
-        alt="avatar image"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent" >
-      
-      <ul class="navbar-nav"><!--
-            <li class="nav-item ml-5 float-right">
-                    
-                    <div class="">
-                      <div class="search">
-                        <div>
-                            <i class="fa fa-search famodif"></i>
-                          <input type="text"  placeholder="       Search . . ." required>
-                        </div>
-                      </div>
-                    </div>
-                  </li>-->
-                  <!-- /search -->
-                  <li class="nav-item active ml-5">
-                      <a class="nav-link" [routerLink]="['/home-profile']" routerLinkActive="active">
-                        <i class="fa fa-home"></i>
-                        Home
-                        </a>
-                    </li>
-                    <li class="nav-item active ml-5">
-                      <a class="nav-link" [routerLink]="['projects']" routerLinkActive="active">
-                        <i class="fa fa-plus"></i>
-                        Add Project
-                        </a>
-                    </li>
-        
-        <li class="nav-item avatar dropdown active  ml-5">
-            <a class="nav-link dropdown-toggle waves-effect waves-light" id="navbarDropdownMenuLink-5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                <i class="fa fa-globe">
-                    <span class="badge badge-danger">5</span>
-                  </i>
-                  React
-                </a>
-            <div class="dropdown-menu dropdown-menu-lg-right dropdown-secondary" aria-labelledby="navbarDropdownMenuLink-5">
-              <a class="dropdown-item waves-effect waves-light" href="#">You have Collabs <span class="badge badge-danger ml-2">4</span></a>
-              <a class="dropdown-item waves-effect waves-light" href="#">You have Reactions<span class="badge badge-danger ml-2">1</span></a>
-              <a class="dropdown-item waves-effect waves-light" href="#">You have <span class="badge badge-danger ml-2">4</span></a>
-            </div>
+<header class="main-header">
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" *ngIf="user">
+      <a class="navbar-brand" [routerLink]="['']" routerLinkActive="active">ICU</a>
+      <form class="form-inline">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1"><i class="fa fa-search"></i></span>
+          </div>
+        </div>
+      </form>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" [routerLink]="['user-project']" routerLinkActive="active">Profile <span class="sr-only">(current)</span></a>
           </li>
-        <li class="nav-item avatar dropdown  ml-5">
-            <a class="nav-link" id="navbarDropdownMenuLink-55" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <img src="{{user.profilePhoto}}" class="rounded-circle z-depth-0 img-taille" alt="avatar image">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Inspire</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contribute</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['projects']" routerLinkActive="active" >Create</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"><i class="fas fa-bell" aria-hidden="true"></i></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             </a>
-            <div class="dropdown-menu dropdown-menu-lg-right dropdown-secondary"
-              aria-labelledby="navbarDropdownMenuLink-55">
-              <a class="dropdown-item " [routerLink]="['user-project']" routerLinkActive="active"><span class="capitalize">{{user.firstName}} </span>Profile</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" [routerLink]="['update-profile']" routerLinkActive="active">Update Profile</a>
-              <a class="dropdown-item" (click)="logout()">Deconnect</a>
+              <a class="dropdown-item" (click)="logout()">Logout</a>
             </div>
           </li>
-      </ul>
-   
-    </div>
-  </nav>
-  <app-navbar-secondary></app-navbar-secondary>
-  <mat-spinner class="container"  *ngIf="showLoding"></mat-spinner>
-  <router-outlet></router-outlet>
+        </ul>
+      </div> 
+    </nav>
+    
+  </div>
+      
+    <app-navbar-secondary></app-navbar-secondary>
+    <mat-spinner class="container"  *ngIf="showLoding"></mat-spinner>
+    <router-outlet></router-outlet>
+</header>
