--- a/src/app/components/commun/navbar-secondary/navbar-secondary.component.html
+++ b/src/app/components/commun/navbar-secondary/navbar-secondary.component.html
@@ -1,42 +1,22 @@
-  <nav class="navbar navbar-light navbar-expand-md bg-light justify-content-center">
-    <button class="navbar-toggler ml-1" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse collapse justify-content-between align-items-center w-100" id="collapsingNavbar2">
-        <ul class="navbar-nav mx-auto text-center">
-            <li class="nav-item mg-5">
-                <a class="nav-link" [routerLink]="['user-project']" routerLinkActive="active">
-                    PROJECT
-                    <i class="">
-                    <span class="">11</span>
-                  </i>
-                </a>
-              </li>
-            <li class="nav-item mg-5">
-                <a class="nav-link" [routerLink]="['user-collabs']" routerLinkActive="active">
-                    COLLABS
-                    <i class="">
-                    <span class="">11</span>
-                  </i>
-                </a>
-              </li>
-              <li class="nav-item mg-5">
-                <a class="nav-link" [routerLink]="['user-favorits']" routerLinkActive="active">
-                    FAVORITS
-                    <i class="">
-                    <span class="">11</span>
-                  </i>
-                </a>
-              </li>
-            <li class="nav-item mg-5">
-                <a class="nav-link" [routerLink]="['user-archive']" routerLinkActive="active">
-                    ARCHIVE
-                    <i class="">
-                    <span class="">11</span>
-                  </i>
-                </a>
-              </li>
-        </ul>
-     
+<section class="profile">
+  <header class="profile-header">
+    <div class="profile-bg">
+      <img src="../../../../assets/images/nature.jpg">
     </div>
-</nav>
+    <img src="{{user.profilePhoto}}">
+  </header>
+  <div class="container mt-class">
+    <ul class="nav justify-content-center">
+      <li class="nav-item text-info active">
+        <a class="nav-link text-info" href="#">Information</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-info" href="#">Projects</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-info" href="#">Followers</a>
+      </li>
+    </ul>
+  </div>
+  
+</section>
