--- a/src/app/components/user-profile/profile/user-project/user-project.component.html
+++ b/src/app/components/user-profile/profile/user-project/user-project.component.html
@@ -1,159 +1,14 @@
-<div class="container">
-    <div class="row">
-        <div class="col-4">
-        <app-profile-information-sidebar></app-profile-information-sidebar>
-    </div>
-<div class="col-8">
-<h4> Projects !</h4>
-<!-- <div class="row">
-        <div class="col-4">
-<div class="card">
-            <img class="card-img-top img-fluid" src="../../../../../assets/images/c1.jpg" alt="Card image cap">
-            <div class="card-body">
-              <hr class="divider danger my-2">
-              <h4 class="card-title">Projet 1</h4>                  
-              <p class="card-text ct">Description du Projet 1</p>
-            </div>
-        </div>
-        </div>
-        <div class="col-4">
-        <div class="card">
-                <img class="card-img-top img-fluid" src="../../../../../assets/images/c2.jpg" alt="Card image cap">
-                <div class="card-body">
-                  <hr class="divider danger my-2">
-                  <h4 class="card-title">Projet 2</h4>                  
-                  <p class="card-text ct">Description du Projet 2</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card">
-                    <img class="card-img-top img-fluid" src="../../../../../assets/images/c3.jpg" alt="Card image cap">
-                    <div class="card-body">
-                      <hr class="divider danger my-2">
-                      <h4 class="card-title">Projet 3</h4>                  
-                      <p class="card-text ct">Description du Projet 3</p>
-                    </div>
-                </div>   
-        </div>
-    </div>   -->
-<!-- <div class="row">
-        <div class="col-4">
-                <div class="card">
-                        <img class="card-img-top img-fluid" src="../../../../../assets/images/c4.jpg" alt="Card image cap">
-                        <div class="card-body">
-                          <hr class="divider danger my-2">
-                          <h4 class="card-title">Projet 4</h4>                  
-                          <p class="card-text ct">Description du Projet 4</p>
-                        </div>
-                    </div>
-                    </div>
-                    <div class="col-4">
-         
-                    <div class="card">
-                            <img class="card-img-top img-fluid" src="../../../../../assets/images/c5.jpg" alt="Card image cap">
-                            <div class="card-body">
-                              <hr class="divider danger my-2">
-                              <h4 class="card-title">Projet 5</h4>                  
-                              <p class="card-text ct">Description du Projet 5</p>
-                            </div>
-                        </div>
-                        </div>
-                        <div class="col-4">
-                               
-                        <div class="card">
-                                <img class="card-img-top img-fluid" src="../../../../../assets/images/c6.jpg" alt="Card image cap">
-                                <div class="card-body">
-                                  <hr class="divider danger my-2">
-                                  <h4 class="card-title">Projet 6</h4>                  
-                                  <p class="card-text ct">Description du Projet 6</p>
-                                </div>
-                            </div> 
-                            </div>
+<div class="container bg-light">
+  <!-- Content About The User -->
+  <div class="jumbotron bg-light">
+    <h1 class="display-4">Marina Escobar</h1>
+    <p class="lead">Front-end dev t dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+    <hr class="my-4">
+    <p>
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+    <a class="btn btn-primary btn-lg" href="#" role="button">Follow me</a>
+  </div>
 </div>
-<div class="row">
-    <div class="col-4">
-
-                            <div class="card">
-                                    <img class="card-img-top img-fluid" src="../../../../../assets/images//c7.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                      <hr class="divider danger my-2">
-                                      <h4 class="card-title">Projet 7</h4>                  
-                                      <p class="card-text ct">Description du Projet 7</p>
-                                    </div>
-                                </div>
-                                </div> 
-                                
-    <div class="col-4">  
-                                <div class="card">
-                                        <img class="card-img-top img-fluid" src="../../../../../assets/images/c8.jpg" alt="Card image cap">
-                                        <div class="card-body">
-                                          <hr class="divider danger my-2">
-                                          <h4 class="card-title">Projet 8</h4>                  
-                                          <p class="card-text ct">Description du Projet 8</p>
-                                        </div>
-                                    </div> 
-                                    </div>
-                                    
-    <div class="col-4">  
-                                    <div class="card">
-                                            <img class="card-img-top img-fluid" src="../../../../../assets/images/c9.jpg" alt="Card image cap">
-                                            <div class="card-body">
-                                              <hr class="divider danger my-2">
-                                              <h4 class="card-title">Projet 9</h4>                  
-                                              <p class="card-text ct">Description du Projet 9</p>
-                                            </div>
-                                        </div>                              
-                       </div>
-</div>
-<div class="row">
-    <div class="col-4">
-                                            <div class="card">
-                                                <img class="card-img-top img-fluid" src="../../../../../assets/images/c10.jpg" alt="Card image cap">
-                                                <div class="card-body">
-                                                  <hr class="divider danger my-2">
-                                                  <h4 class="card-title">Projet 10</h4>                  
-                                                  <p class="card-text ct">Description du Projet 10</p>
-                                                </div>
-                                            </div>   
-             </div>
-             
-    <div class="col-4">
-                                            <div class="card">
-                                                    <img class="card-img-top img-fluid" src="../../../../../assets/images/c11.jpg" alt="Card image cap">
-                                                    <div class="card-body">
-                                                      <hr class="divider danger my-2">
-                                                      <h4 class="card-title">Projet 11</h4>                  
-                                                      <p class="card-text ct">Description du Projet 11</p>
-                                                    </div>
-
-                                                </div>   
-
-                                            </div>
-                                            <div class="col-4">
-                                                    <div class="card">
-                                                            <img class="card-img-top img-fluid" src="../../../../../assets/images/c12.jpg" alt="Card image cap">
-                                                            <div class="card-body">
-                                                              <hr class="divider danger my-2">
-                                                              <h4 class="card-title">Projet 12</h4>                  
-                                                              <p class="card-text ct">Description du Projet 12</p>
-                                                            </div>
-       
-                                                        </div>   
-       
-                                                    </div>
-                                            </div> -->
-                                          
-                                            <!-- <div class="card">
-                                                    <img class="card-img-top img-fluid" src="../../../../../assets/images/c13.png" alt="Card image cap">
-                                                    <div class="card-body">
-                                                      <hr class="divider danger my-2">
-                                                      <h4 class="card-title">Projet 13</h4>                  
-                                                      <p class="card-text ct">Description du Projet 13</p>
-                                                    </div>
-
-                                                </div>    -->
-</div> 
-</div>
-</div>
-
