--- a/src/app/components/Project/view-project/view-project.component.html
+++ b/src/app/components/Project/view-project/view-project.component.html
@@ -2,7 +2,7 @@
 	    <!-- ==============================================
 	    Hero
 	    =============================================== -->
-        <section class="hero" *ngIf="user && project">
+        <section class="hero" *ngIf="project">
             <div class="container">
              <div class="row">	
              
@@ -24,19 +24,20 @@
                  </div><!--/ dropdown -->
                  <div class="media m-0">
                   <div class="d-flex mr-3">
-                   <a href=""><img class="img-fluid rounded-circle" src="{{user.profilePhoto}}" alt="User"></a>
+                   <a href=""><img class="img-fluid rounded-circle" src="{{project.profilePhoto}}" alt="User"></a>
                   </div>
                   <div class="media-body">
-                   <p class="m-0">{{user.firstName}} {{user.lastName}}</p>
-                   <small><span><i class="icon ion-md-pin"></i> {{user.location}}</span></small>
-                   <small><span><i class="icon ion-md-time"></i> 10 hours ago</span></small>
+                   <p class="m-0">{{project.firstName}} {{project.lastName}}</p>
+                   <small><span><i class="icon ion-md-pin"></i> {{project.location}}</span></small>
+                   <br>
+                   <small><span><i class="icon ion-md-time"></i>il y a : {{project.createdAt |  date:'HH'}} heures</span></small>
                    
                </div>
                  </div><!--/ media -->
                 </div><!--/ cardbox-heading -->
                  
                 <div class="cardbox-item">
-                 <img class="img-fluid" src="{{project.media.path}}" alt="{{project.media.path}}">
+                 <img class="img-fluid mx-auto c" src="{{project.media.path}}" alt="{{project.media.path}}">
                 </div><!--/ cardbox-item -->
                 <div class="cardbox-base">
                  <ul class="float-right">
@@ -52,9 +53,9 @@
                  </ul>			    -->
                 </div><!--/ cardbox-base -->
                 <div class="media-body">
-                       <p class="m-0">Project Title: {{project.title}}</p>
-                       <p class="m-0">Project description: {{project.description}}</p>
-                       <p class="m-0">Copy {{project.copy}}</p>
+                       <p class="m-0"><b>Project Title:</b> {{project.title}}</p>
+                       <p class="m-0"><b>Project description:</b> {{project.description}}</p>
+                       <p class="m-0"><b>Copy:</b> {{project.copy.text}}</p>
                        
                </div>
                 <div class="cardbox-comments">
