--- a/src/app/components/Project/projects-feed/projects-feed.component.css
+++ b/src/app/components/Project/projects-feed/projects-feed.component.css
@@ -23,6 +23,10 @@ a {
     color: #0060B6;
     text-decoration: none;
 }
+.blur:hover {
+    webkit-filter: blur(4px); /* Chrome, Safari, Opera */
+    filter: blur(4px);
+}
 
 a:hover 
 {
