--- a/src/app/components/Project/view-project/view-project.component.css
+++ b/src/app/components/Project/view-project/view-project.component.css
@@ -5,6 +5,17 @@
 * ===========================================================
 *
 */
+.previous {
+  background-color: #f1f1f1;
+  color: black;
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+}
+.previous:hover {
+  background-color: #ddd;
+  color: black;
+}
 .hero {
     padding: 6.25rem 0px !important;
     margin: 0px !important;
