--- a/src/app/components/Project/projects-feed/projects-feed.component.css
+++ b/src/app/components/Project/projects-feed/projects-feed.component.css
@@ -139,15 +139,17 @@ a:hover
 }
 .inactive {
     background-color:#FFFFF499;
-    color:#bd2130;
-    border:0.5px solid #bd2130;
+    color:#2b74e9;
+    border:1px solid #4286f494;
     font-size:105%;
+    font-weight:bold;
 }
 .active {
-    background-color:#bd2130;
+    background-color:#4286f4;
     color:#FFFFF499;
-    border:0.5px solid #FFFFF499;
+    border:1px solid #FFFFF499;
     font-size:105%;
+    font-weight:bold;
 }
 
 .date{
