--- a/src/app/components/Project/create_project/projects.component.css
+++ b/src/app/components/Project/create_project/projects.component.css
@@ -33,6 +33,13 @@ input , textarea, .inputFile{
   border-width: 0 0 2px;
   border-color: #C8C8C8;
 }
+div.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  padding: 50px;
+  font-size: 20px;
+}
 
 .inputFile {
   border-radius:0px;
@@ -100,4 +107,27 @@ border-top:1px solid #C8C8C8;
   color:#FFFFF499;
   border:2px solid #FFFFF499;
   font-size:95%;
+}
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 7.5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px rgba(0, 161, 182, 0.753); 
+  border-radius: 20px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #4286f4a1;
+  border-radius: 20px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #4286f4cc; 
 }
