--- a/src/app/components/commun/navbar-profile/navbar-profile.component.html
+++ b/src/app/components/commun/navbar-profile/navbar-profile.component.html
@@ -15,17 +15,11 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <ul class="navbar-nav">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" [routerLink]="['/profile/']" routerLinkActive="active">Profile <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Inspire</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contribute</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/projects']" routerLinkActive="active" >Create</a>
+            <a class="nav-link" [routerLink]="['/home/feeds/0/0']" routerLinkActive="active">Inspire</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"><i class="fas fa-bell" aria-hidden="true"></i></a>
