--- a/src/app/components/user-profile/profile/profile-information-sidebar/profile-information-sidebar.component.html
+++ b/src/app/components/user-profile/profile/profile-information-sidebar/profile-information-sidebar.component.html
@@ -1,28 +1,40 @@
-<div class="sidebar" *ngIf="user">
-                    <div class="profile-card py-3 card text-center">
-                        <div class="card-body py-2">
-                            <img class="profile-picture rounded-circle" src="{{user.profilePhoto}}" class="rounded-circle z-depth-0 img-taille" />
-                            <h2 class="text-black h5 font-weight-normal font-style-arial mt-4 mb-1 capitalize">
-                                {{user.firstName}}                            </h2>
-                            <p class="text-muted font-weight-normal">
-                                designer
-                                <br>
-                                @{{user.firstName}}{{user.lastName}} 
-                            </p>
-                          <div class="row">
-                            <a  class=" nav-link ml-2 col"  href="{{user.url}}" target="_blank"> 
-                               <i class="fa fa-facebook-official"></i>
-                           </a>
-                        </div>
-
-                           <hr >                                
-
-                            <h5 class="w 100 mb-1 pt-1 h6 text-muted text-left">ABOUT</h5>
-                            <p class="px-2 mt-2 mb-2 text-muted text-left text-secondary">
-                           {{user.bio}}
-                            <h6 class="mt-4 pt-3 mb-5 text-muted small font-weight-bold">MEMBER SINCE : {{user.created_at | date:'MMMM yyyy'}}
-                            </h6>
-                          
-                        </div>
-                    </div>
+<div class="grid-wrapper">
+        <!-- Profile Header -->
+        <section class="profile">
+            <header class="profile-header">
+                <div class="profile-bg">
+                    <img src="assets/images/nature.jpg">
                 </div>
+                <img src="{{user.profilePhoto}}">
+            </header>
+        </section>
+        <!-- Profile Nav -->
+        <div class="profile-nav">
+            <div class="container mt-class">
+                <ul class="nav justify-content-center">
+                  <li class="nav-item text-info active">
+                    <a class="nav-link text-info" href="#">Projects</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-info" href="#">Followers</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-info" href="#">Followers</a>
+                  </li>
+                </ul>
+            </div>
+        </div>
+        <!-- Content About The User -->
+        <div class="user-info">
+            <div class="card border-secondary mb-3">
+              <div class="card-header text-center"><h3>{{user.firstName}} {{user.lastName}}</h3></div>
+              <div class="card-body text-secondary card-title">
+                <h5 class="card-title text-center">{{user.bio}}</h5>
+                <p class="card-text"></p>
+                <h5 class="card-title text-center"><i class="far fa-gem"></i> Diamond</h5>
+                <div class="card-footer bg-transparent text-center">Score 213</div>
+              </div>
+            </div>
+        </div>
+   
+    </div>
